--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-4.32MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-3.35MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.47MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-6.44MB/s(Youtube:不良林), server: 103.173.255.234, port: 28443, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-213.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.61MB/s(Youtube:不良林), server: 157.120.35.234, port: 28443, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.19MB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 卢森堡-366.0KB/s(Youtube:不良林), server: 91.243.81.248, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
   - {name: 🇺🇸 美国-482.8KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-600.5KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇷🇺 俄罗斯联邦-737.6KB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-719.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-208.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-310.9KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-672.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-301.7KB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-742.5KB/s(Youtube:不良林), server: hnyd.52147.top, port: 20020, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 卢森堡-366.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-737.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 卢森堡-366.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-737.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 卢森堡-366.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-737.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 卢森堡-366.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-737.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 卢森堡-366.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-737.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 卢森堡-366.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-737.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.35MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 卢森堡-366.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-600.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-737.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
