--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,118 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.19MB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 卢森堡-366.0KB/s(Youtube:不良林), server: 91.243.81.248, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-482.8KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-719.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-208.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-310.9KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-672.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-301.7KB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-742.5KB/s(Youtube:不良林), server: hnyd.52147.top, port: 20020, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-6.44MB/s(Youtube:不良林), server: 103.173.255.234, port: 28443, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-990.8KB/s(Youtube:不良林), server: hkt.52147.top, port: 28443, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: hkt.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-3.75MB/s(Youtube:不良林), server: s100.boom.party, port: 19000, type: ssr, cipher: aes-256-cfb, password: Uk92CS, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 343767:3StTW5, obfs-param: download.windowsupdate.com}
+  - {name: 🇨🇳 中国-489.4KB/s(Youtube:不良林), server: 120.233.29.189, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇨🇳 中国-3.92MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-331.3KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30010, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.19MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.50MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 卢森堡-366.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 卢森堡-366.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 卢森堡-366.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 卢森堡-366.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 卢森堡-366.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 卢森堡-366.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +132,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 卢森堡-366.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-482.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-719.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-301.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-742.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
