--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇻🇳 越南-6.44MB/s(Youtube:不良林), server: 103.173.255.234, port: 28443, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-990.8KB/s(Youtube:不良林), server: hkt.52147.top, port: 28443, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: hkt.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-3.75MB/s(Youtube:不良林), server: s100.boom.party, port: 19000, type: ssr, cipher: aes-256-cfb, password: Uk92CS, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 343767:3StTW5, obfs-param: download.windowsupdate.com}
-  - {name: 🇨🇳 中国-489.4KB/s(Youtube:不良林), server: 120.233.29.189, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
-  - {name: 🇨🇳 中国-3.92MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-331.3KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30010, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-5.95MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-464.6KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-2.37MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-506.8KB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇭🇰 香港-3.19MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇭🇰 香港-1.50MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-457.1KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-8.03MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20020, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 波兰-393.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-457.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 波兰-393.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-457.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 波兰-393.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,21 +53,19 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-457.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 波兰-393.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
       - 🔰 节点选择
@@ -77,30 +75,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-457.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 波兰-393.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-457.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 波兰-393.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -108,15 +106,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-457.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 波兰-393.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -133,15 +131,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇻🇳 越南-6.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-990.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-457.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 波兰-393.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
