--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.04MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30010, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-331.3KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30010, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-5.91MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-213.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-247.1KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-472.9KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-428.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-2.93MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.36MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-657.7KB/s(Youtube:不良林), server: 157.120.35.234, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-8.03MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20020, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-152.2KB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇻🇳 越南-4.92MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.33MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.10MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.61MB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-6.79MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: gzyd1.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-657.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-657.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-657.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.36MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-657.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-657.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-657.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-657.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
